--- a/src/javastudy/gs-accessing-data-mongodb/README.adoc
+++ b/src/javastudy/gs-accessing-data-mongodb/README.adoc
@@ -2,6 +2,9 @@
 :icons: font
 :source-highlighter: prettify
 :project_id: gs-accessing-data-mongodb
+
+clone from: https://github.com/spring-guides/gs-accessing-data-mongodb
+
 This guide walks you through the process of using https://projects.spring.io/spring-data-mongodb/[Spring Data MongoDB] to build an application that stores data in and retrieves it from https://www.mongodb.org/[MongoDB], a document-based database.
 
 
@@ -101,7 +104,7 @@ Here you create an Application class with all the components.
 `src/main/java/hello/Application.java`
 [source,java]
 ----
-include::complete/src/main/java/hello/Application.java[]
+include::complete/src/main/java/hello/MongoApplication.java[]
 ----
 
 include::https://raw.githubusercontent.com/spring-guides/getting-started-macros/master/spring-boot-application.adoc[]
