--- a/src/exam/postgraduated/self-introduction.adoc
+++ b/src/exam/postgraduated/self-introduction.adoc
@@ -8,11 +8,11 @@ NOTE: This file is used for my interview to graduate school. You can refer to my
 
 Good morning. Dear professors, I feel so glad to meet all of you here.
 
-My name is Cai Jiahao. I am major in computer science and technology and will be graduated from _your school_ next year. As an undergraduate student, during my previous three-year study, I build up a basic foundation of computer science and techniques.
+My name is Cai Jiahao. I am major in computer science and technology and will be graduated from _College of Information and Technology_ of _Shanghai Ocean University_ next year. As an undergraduate student, during my previous three-year study, I build up a basic foundation of computer science and techniques.
 
 Because of my passion for computer science and strong desire to devote to IT industry, I have participated in three internships during my undergraduate career. I hope to consolidate my knowledge of computer theory through practical enterprise-level development, and at the same time, let me be more motivated, more goal-oriented, and more specifically to learn the related theoretical foundation that I am interested in.
 
-The first company is a startup company established by my upperclassman working in network security and outsourcing projects’ development. The second company is an Internet company that makes online novels sold to overseas which are translated from Chinese to English, Spanish or other languages by AI. The third company is _your company_, a traditional foreign company that makes electrical appliances, machinery and automobiles which is committed to transforming to the Internet. My work in these companies is detailed in my resume.
+The first company is a startup company established by my upperclassman working in network security and outsourcing projects’ development. The second company is an Internet company that makes online novels sold to overseas which are translated from Chinese to English, Spanish or other languages by AI. The third company is _Bosch Group (China)_, a traditional foreign company that makes electrical appliances, machinery and automobiles which is committed to transforming to the Internet. My work in these companies is detailed in my resume.
 
 Through these internships, I master some cutting-edge development skills, focus on backend development, have a lot of experience in using middleware and framework and learn some underlying source code and development principles.
 
@@ -24,6 +24,6 @@ Finally I want to talk about my ambition. In this area, my idol are _Douglas S. 
 
 I have a dream that one day many people or developers or businesses will use the features which are realized by my team. For example, it’s my honor to design and develop the backend software used for Double Eleven which can handle hundreds of millions of concurrent requests. Or I want to be an active open-source community contributor and collaborate with programmers around the world every day to create popular works.
 
-I hope to further study the theoretical foundations and practical knowledge of distributed systems and distributed computing in the postgraduate stage in _your target school_.
+I hope to further study the theoretical foundations and practical knowledge of distributed systems and distributed computing in the postgraduate stage in _School of Computer Engineering and Science_ of _Shanghai University_.
 
-Thanks every one.
+My speech is over, thanks for your listening.
