--- a/src/exam/postgraduated/self-introduction.adoc
+++ b/src/exam/postgraduated/self-introduction.adoc
@@ -20,7 +20,7 @@ While going out for internships, I did not put down the curriculum on campus, ac
 
 In the study and practice of computer science, I found the fun in software development. When I have free time, I will learn the latest and most popular development techniques and programming ideas, and I will also try my best to learn classic computer theory. Whether it's actual development or daily learning, I am constantly improving my code quality, maintainability and readability. In my spare time, I don’t suspend learning computer science. I often learn some interesting open source project in GitHub. I want to be active in the open source community such as GitHub.
 
-Finally I want to talk about my ambition. In this area, my idol are _Douglas S. Lea_ and _Linus Torvalds_. The former is a professor of computer science and current head of the computer science department at State University of New York at Oswego, where he specializes in concurrent programming and the design of concurrent data structures. I have read the book he wrote _Java Concurrency in Practice_ and some teaching materials about Java NIO. The latter is the creator and historically principal developer of the Linux kernel. As everyone knows, his legendary experience should not be repeated here.
+Finally I want to talk about my ambition. In this area, my idol are _Douglas S. Lea_ and _Linus Torvalds_. The former is a professor of computer science and current head of the computer science department at _State University of New York at Oswego_, where he specializes in concurrent programming and the design of concurrent data structures. I have read the book he wrote _Java Concurrency in Practice_ and some teaching materials about Java NIO. The latter is the creator and historically principal developer of the Linux kernel. As everyone knows, his legendary experience should not be repeated here.
 
 I have a dream that one day many people or developers or businesses will use the features which are realized by my team. For example, it’s my honor to design and develop the backend software used for Double Eleven which can handle hundreds of millions of concurrent requests. Or I want to be an active open-source community contributor and collaborate with programmers around the world every day to create popular works.
 
